# note-tagger

./: .gitignore  CLAUDE.md  CODEBASE_GUIDE.md  Cargo.toml  README.md  justfile  wrangler.toml
.cargo/: config.toml
.wrangler/cache/: cf.json
.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
.wrangler/state/v3/r2/miniflare-R2BucketObject/: metadata.sqlite-shm  metadata.sqlite-wal
.wrangler/tmp/bundle-6ZEqKo/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-zzsswj/: middleware-loader.entry.ts
.wrangler/tmp/dev-KZd3Du/: 6d9356db71b19077d3283d414729d4ca9c6913b5-index_bg.wasm  ed2c44e20c3b49991758aad23264994f6395e7b1-index_bg.wasm  index.js  index.js.map
assets/: convert_f16.py  convert_to_safetensors.py  justfile
src/: app.rs  lib.rs  main.rs  types.rs  webworker.rs
src/components/: mod.rs  note_taker.rs
src/ml/: embed.rs  mod.rs  model.rs  util.rs
style/: main.css
